logs/django-pizza.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Django_Next_Please-16.12.1.egg-info'...
Listing './lib/python3.5/site-packages/Django_Pizza-16.10.1.egg-info'...
Listing './lib/python3.5/site-packages/NextPlease'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pizza'...
Listing './lib/python3.5/site-packages/pizza/blog'...
Listing './lib/python3.5/site-packages/pizza/blog/migrations'...
Listing './lib/python3.5/site-packages/pizza/blog/templates'...
Listing './lib/python3.5/site-packages/pizza/blog/templates/pizza'...
Listing './lib/python3.5/site-packages/pizza/blog/templates/pizza/blog'...
Listing './lib/python3.5/site-packages/pizza/blog/templatetags'...
Listing './lib/python3.5/site-packages/pizza/calendar'...
Listing './lib/python3.5/site-packages/pizza/calendar/migrations'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/management'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/management/commands'...
Compiling './lib/python3.5/site-packages/pizza/kitchen_sink/management/commands/importpages.py'...
***   File "./lib/python3.5/site-packages/pizza/kitchen_sink/management/commands/importpages.py", line 23
    print "Choose a page to overwrite for {} - {}".format(page['url'], page['sites_list'])
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pizza/kitchen_sink/migrations'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/adapters'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/lang'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/a11yhelp'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/about'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/clipboard'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/colordialog'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/dialog'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/div'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/fakeobjects'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/find'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/flash'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/forms'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/iframe'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/image'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/link'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/liststyle'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/magicline'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/pagebreak'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/pastefromword'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/pizzafile'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/pizzaimage'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/preview'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/scayt'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/showblocks'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/smiley'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/specialchar'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/table'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/tabletools'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/templates'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/plugins/wsc'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/samples'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/samples/assets'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/samples/plugins'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/skins'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/ckeditor/skins/moono'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/css'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/static/ks/js'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/templates'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/templates/ks'...
Listing './lib/python3.5/site-packages/pizza/kitchen_sink/templatetags'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sorl'...
Listing './lib/python3.5/site-packages/sorl/thumbnail'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/admin'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/conf'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/engines'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/kvstores'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/management'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/management/commands'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/migrations'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/templatetags'...
Listing './lib/python3.5/site-packages/sorl_thumbnail-12.4.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
